# controller/co/add_hermann_memorial.go
@@ -1,0 +1,10 @@
+package co
+
+import "cgin/util"
+
+type AddHermannMemorial struct {
+	AuthCredit
+	Unit      uint          `json:"unit" example:"2"`
+	TotalUnit uint          `json:"total_unit" example:"39"`
+	StartAt   util.JSONTime `json:"start_at,string"`
+}
